<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    tools:context="ui.view.AboutFragment">

    <ImageView
        android:id="@+id/logo_imageview"
        android:layout_width="300dp"
        android:layout_height="140dp"
        android:src="@drawable/foro_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Quiénes Somos"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo_imageview"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/first_paragraph_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_below="@id/title_textview"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/second_paragraph_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description1"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_below="@id/first_paragraph_textview"
        android:layout_marginTop="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/third_paragraph_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description2"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_below="@id/second_paragraph_textview"
        android:layout_marginTop="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"/>

</RelativeLayout>
